[#5] fix: Fix Search hits block overflow on modal

--- a/assets/algolia/algolia.css
+++ b/assets/algolia/algolia.css
@@ -39,7 +39,6 @@
 
 #searchbox {
   flex-grow: 0;
-  margin-bottom: 8px;
 }
 
 #searchbox,
