--- a/assets/css/search-modal.css
+++ b/assets/css/search-modal.css
@@ -8,10 +8,12 @@ a {text-decoration: none; color:#666;}
 /* modal */
 #modal {position: fixed; left:0; top:0; width: 100%; height: 100%; transform: scale(0); }
 #modal .modal-bg {background: rgba(0,0,0,0.7); display:flex; align-items: center; justify-content: center; height: 100%; }
-#modal .modal-bg .modal-cont {position:relative; background: #fff; padding: 40px; width: 60%; height: 50%; display: inline-block;}
+#modal .modal-bg .modal-cont {position:relative; background: #fff; padding: 40px; width: 60%; height: 80%; display: flex; flex-direction: column;overflow: hidden;}
 #modal .modal-bg .modal-cont h2 {font-size: 30px; margin:0;}
-#modal .modal-bg .modal-cont .close {position: absolute; top: 0; right:0; margin:20px; padding: 10px; background: #000; border-radius: 50%; }
-#modal .modal-bg .modal-cont .close svg {width: 24px; fill: #fff; vertical-align: top;}
+#modal .modal-bg .modal-cont #searchbox {margin-top:0;margin-bottom: 8px;flex-grow: 1;flex-basis: 1;}
+#modal .modal-bg .modal-cont #hits {flex-grow: 1;flex-basis: 1;overflow: auto;}
+#modal .modal-bg .modal-cont .close {position: absolute; top: 0; right:0; margin:15px;  background:inherit; border-radius: 50%; }
+#modal .modal-bg .modal-cont .close svg {width: 15px; fill:black; vertical-align: top;}
 
 
 #modal.one {
